--- a/src/styles/tag-manager.scss
+++ b/src/styles/tag-manager.scss
@@ -1,6 +1,8 @@
 .tag-manager {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow-y: auto;
   &__header {
     height: 60px;
     flex-shrink: 0;
@@ -45,5 +47,213 @@
   }
   &__table {
     flex: 1;
+    display: flex;
+    .tag-manager-table {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      &__header {
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        height: 49px;
+        border-top: 1px solid #CFCFCF;
+        > span {
+          flex: 1;
+          font-size: 12px;
+          text-transform: uppercase;
+          &:first-of-type {
+            max-width: 57px;
+            text-align: center;
+            height: 17px;
+          }
+          &:nth-of-type(2) {
+            max-width: 55px;
+          }
+          &:nth-of-type(8) {
+            cursor: pointer;
+          }
+          &:last-of-type {
+            padding-right: 20px;
+            text-align: right;
+          }
+        }
+      }
+      &__rows {
+        flex: 1;
+        background-color: #F4F4F4;
+        .table-row {
+          background-color: #FFFFFF;
+          flex-shrink: 0;
+          display: flex;
+          align-items: center;
+          height: 58px;
+          border-top: 1px solid #CFCFCF;
+          &:hover {
+            background-color: #E6F7F4;
+            cursor: pointer;
+          }
+          &__item {
+            flex: 1;
+            font-size: 14px;
+            color: #3E4543;
+            &.empty-value {
+              color: #9B9B9B;
+            }
+            &.checkbox {
+              max-width: 57px;
+              height: 17px;
+              text-align: center;
+            }
+            &.color {
+              max-width: 55px;
+              display: flex;
+              align-items: center;
+              position: relative;
+              .color-label-wrapper {
+                display: flex;
+                align-items: center;
+                .color-label {
+                  border-radius: 100%;
+                  width: 17px;
+                  height: 17px;
+                }
+                .arrow {
+                  color: #9B9B9B;
+                  margin-left: 6px;
+                }
+              }
+              .color-palette {
+                position: absolute;
+                background-color: #FFFFFF;
+                border: 1px solid #CFCFCF;
+                border-radius: 4px;
+                box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.3);
+                width: 155px;
+                height: 95px;
+                left: 0;
+                top: 24px;
+                z-index: 2;
+                padding: 10px 0 10px 10px;
+                &__title {
+                  color: #3E4543;
+                  font-weight: 700;
+                }
+                &__content {
+                  display: flex;
+                  flex-wrap: wrap;
+                  justify-content: space-between;
+                  &--item {
+                    border-radius: 100%;
+                    width: 17px;
+                    height: 17px;
+                    margin: 10px 10px 0 0;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    &:hover {
+                      transform: scale(1.1);
+                    }
+                    .check {
+                      font-size: 11px;
+                      color: #FFFFFF;
+                    }
+                  }
+                }
+              }
+            }
+            &.name {
+              .tag-name {
+                display: inline-block;
+                height: 18px;
+                border-radius: 5px;
+                font-size: 11px;
+                line-height: 18px;
+                font-weight: 700;
+                color: #FFFFFF;
+                padding: 0 4px;
+                text-transform: uppercase;
+              }
+            }
+            &.expundge-date,
+            &.options {
+              text-transform: capitalize;
+            }
+            &.delete {
+              padding-right: 20px;
+              text-align: right;
+              font-weight: 700;
+              color: #CF202E;
+              cursor: pointer;
+              &:hover {
+                opacity: 0.8;
+              }
+            }
+          }
+        }
+      }
+      &__pagination {
+        flex-shrink: 0;
+        height: 49px;
+        border-top: 1px solid #CFCFCF;
+        .table-pagination {
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 0 20px;
+          &__per-page {
+            display: flex;
+            align-items: center;
+            color: #3E4543;
+            text-transform: uppercase;
+            font-size: 12px;
+            .number {
+              color: #00A88D;
+              font-weight: 700;
+              margin-left: 5px;
+            }
+          }
+          &__controls {
+            display: flex;
+            align-items: center;
+            svg {
+              color: #9B9B9B;
+              font-size: 18px;
+              cursor: pointer;
+              margin: 0 2px;
+            }
+            &--pages {
+              margin: 0 4px;
+              input {
+                background-color: #F4F4F4;
+                width: 38px;
+                height: 29px;
+                border: none;
+                text-align: right;
+                padding-right: 2px;
+                font-size: 12px;
+                font-weight: 700;
+                margin-right: 4px;
+              }
+              span {
+                font-size: 12px;
+                font-weight: 400;
+                text-transform: uppercase;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .delete-tag-modal {
+    text-align: center;
+    padding: 46px 0 60px;
+    p {
+      margin-top: 18px;
+      font-size: 14px;
+    }
   }
 }
